# EliminaBot

./: .env.example  .gitignore  LICENSE  README.md  REFACTOR_PLAN.md  alembic.ini  main.py  privacy-policy.md  privacy_policy.md  pyproject.toml  terms-of-service.md
alembic/: env.py
alembic/versions/: 468e613dea13_add_guild_table.py  90de1b4de5b6_.py  f729f5f5e3e8_add_guild_table.py
bot/: __main__.py
bot/commands/: administration.py  info.py  moderation.py  utility.py
bot/utils/: errorHandler.py  eventHandler.py  fileHandler.py
elimina/: __init__.py  __main__.py  bot.py  config.py  constants.py
elimina/commands/: admin.py  info.py  mod.py  owner.py  utility.py
elimina/db/: __init__.py  guild.py
elimina/entities/: guild.py
elimina/exceptions/: db_exceptions.py  elimina_exceptions.py
elimina/handlers/: error_handler.py  event_handler.py
elimina/helpers/: snipe.py
elimina/utils/: errorHandler.py  error_handler.py  eventHandler.py  event_handler.py  fileHandler.py  utils.py
scripts/: guild_copy.py  migrate_data.py  migrate_ignored_bots.py
